--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-25T04:37:16.888Z",
+  "generatedAt": "2025-08-25T09:03:51.350Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -924,6 +924,51 @@
           "id": "sidepart37-yellow",
           "name": "sidepart37 (Yellow)",
           "path": "/assets/character/hair/hair-front/hair-front-sidepart37-yellow.png",
+          "color": "#FFF9C4"
+        }
+      ]
+    },
+    {
+      "baseId": "hair-front-sidepart64",
+      "part": "hair",
+      "subpart": "front",
+      "style": "sidepart64",
+      "basePath": "/assets/character/hair/hair-front/hair-front-sidepart64.png",
+      "variants": [
+        {
+          "id": "sidepart64-blue",
+          "name": "sidepart64 (Blue)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-blue.png",
+          "color": "#90CAF9"
+        },
+        {
+          "id": "sidepart64-brown",
+          "name": "sidepart64 (Brown)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-brown.png",
+          "color": "#8B4513"
+        },
+        {
+          "id": "sidepart64-pink",
+          "name": "sidepart64 (Pink)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-pink.png",
+          "color": "#F8BBD0"
+        },
+        {
+          "id": "sidepart64-red",
+          "name": "sidepart64 (Red)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-red.png",
+          "color": "#FF8A80"
+        },
+        {
+          "id": "sidepart64-white",
+          "name": "sidepart64 (White)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-white.png",
+          "color": "#FAFAFA"
+        },
+        {
+          "id": "sidepart64-yellow",
+          "name": "sidepart64 (Yellow)",
+          "path": "/assets/character/hair/hair-front/hair-front-sidepart64-yellow.png",
           "color": "#FFF9C4"
         }
       ]
