--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-28T01:59:53.974Z",
+  "generatedAt": "2025-08-28T02:05:35.220Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -39,7 +39,14 @@
       "subpart": "",
       "style": "default",
       "basePath": "/assets/character/accessories/glasses/glasses-default.png",
-      "variants": []
+      "variants": [
+        {
+          "id": "default-white",
+          "name": "default (White)",
+          "path": "/assets/character/accessories/glasses/glasses-default-white.png",
+          "color": "#FAFAFA"
+        }
+      ]
     },
     {
       "baseId": "glasses-square",
