--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-28T02:05:35.220Z",
+  "generatedAt": "2025-08-28T05:16:01.580Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -44,6 +44,21 @@
           "id": "default-white",
           "name": "default (White)",
           "path": "/assets/character/accessories/glasses/glasses-default-white.png",
+          "color": "#FAFAFA"
+        }
+      ]
+    },
+    {
+      "baseId": "glasses-matmeo",
+      "part": "glasses",
+      "subpart": "",
+      "style": "matmeo",
+      "basePath": "/assets/character/accessories/glasses/glasses-matmeo.png",
+      "variants": [
+        {
+          "id": "matmeo-white",
+          "name": "matmeo (White)",
+          "path": "/assets/character/accessories/glasses/glasses-matmeo-white.png",
           "color": "#FAFAFA"
         }
       ]
