--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-29T12:15:41.932Z",
+  "generatedAt": "2025-08-29T13:42:07.495Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -771,6 +771,14 @@
           "color": "#FF8A80"
         }
       ]
+    },
+    {
+      "baseId": "mouth-smile2",
+      "part": "mouth",
+      "subpart": "",
+      "style": "smile2",
+      "basePath": "/assets/character/face/mouth/mouth-smile2.png",
+      "variants": []
     },
     {
       "baseId": "mouth-wow",
