feat(assets): add body-default-silver color variant

--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-09-15T16:18:50.609Z",
+  "generatedAt": "2025-09-15T16:22:11.749Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -109,6 +109,12 @@
           "id": "default-choco",
           "name": "default (Choco)",
           "path": "/assets/character/body/body/body-default-choco.png",
+          "color": "#666666"
+        },
+        {
+          "id": "default-silver",
+          "name": "default (Silver)",
+          "path": "/assets/character/body/body/body-default-silver.png",
           "color": "#666666"
         },
         {
