--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-10-13T16:13:32.002Z",
+  "generatedAt": "2025-10-14T03:13:23.290Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -190,7 +190,14 @@
       "subpart": "",
       "style": "ribbon",
       "basePath": "/assets/character/accessories/hat/hat-ribbon.png",
-      "variants": []
+      "variants": [
+        {
+          "id": "ribbon-pink",
+          "name": "ribbon (Pink)",
+          "path": "/assets/character/accessories/hat/hat-ribbon-pink.png",
+          "color": "#F8BBD0"
+        }
+      ]
     },
     {
       "baseId": "body-default",
@@ -861,7 +868,14 @@
       "subpart": "",
       "style": "1side",
       "basePath": "/assets/character/face/mouth/mouth-1side.png",
-      "variants": []
+      "variants": [
+        {
+          "id": "1side-pink",
+          "name": "1side (Pink)",
+          "path": "/assets/character/face/mouth/mouth-1side-pink.png",
+          "color": "#F8BBD0"
+        }
+      ]
     },
     {
       "baseId": "mouth-default",
